# monopoly

./: .gitignore  README.md  monopoly.cabal
app/: Main.hs
images/: Untitled Diagram.xml
src/: Const.hs  Model.hs  Monopoly.hs
test/test/: DocTest.hs
