name:                monopoly
version:             0.1
synopsis:            Монополия
-- description:
homepage:            https://github.com/cmc-haskell-2017/demo-space-junk#readme
license:             MIT
license-file:        LICENSE
author:              Nadya Yakunina, Irina Adamova, Alla Dorofeeva, Mikhail Gorbushin
maintainer:          nadynady98@mail.ru
copyright:           2017 Nadya Yakunina, Irina Adamova, Alla Dorofeeva, Mikhail Gorbushin
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Monopoly,
                       Const,
                       Model
  ghc-options:         -Wall -fno-warn-type-defaults
  build-depends:       base >= 4.7 && < 5
                     , gloss
                     , gloss-juicy
  default-language:    Haskell2010

executable monopoly
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , monopoly
  default-language:    Haskell2010

test-suite doctest
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Doctest.hs
  build-depends:       base
                     , monopoly
                     , doctest >= 0.11.1
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/cmc-haskell-2017/demo-space-junk
